front end design

--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -34,7 +34,7 @@
         Header Content
     </header>
     <footer>
-        Best School center
+        Best School
     </footer>
 </body>
 </html>
