--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -13,7 +13,7 @@
         Header Content
     </header>
     <footer>
-        Best School center
+        Best School
     </footer>
 </body>
 </html>
