--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -10,7 +10,7 @@
         Header Content
     </header>
     <footer style="background-color: #00FF00; height: 60px; width: 100%; display: flex; justify-content: center; align-items: center; position: absolute; bottom: 0;">
-        Best School center
+        Best School
     </footer>
 </body>
 </html>
